// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[App] matches snapshot 1`] = `
<div>
  <div
    class="h-screen"
    id="App"
  >
    <aside
      class="flex flex-col justify-between border-r border-slate-300 fixed top-0 left-0 bottom-0 w-64"
      id="sidebar"
    >
      <div
        class="flex flex-col flex-initial overflow-y-auto"
        id="request-list"
      >
        <div
          class="p-1 flex justify-between font-bold select-none bg-slate-100"
        >
          Requests
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
      <div
        class="flex flex-col flex-none overflow-y-auto"
        id="intercept-list"
      >
        <div
          class="p-1 flex justify-between select-none bg-slate-100"
        >
          <span
            class="font-bold"
          >
            Intercepts
          </span>
          <button
            class="self-stretch"
            title="Add intercept"
          >
            <svg
              class="h-full w-auto"
            />
          </button>
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
    </aside>
    <main
      class="min-h-screen ml-64"
      id="main"
    >
      <div
        class="container min-h-screen flex flex-col justify-center items-center bg-slate-50 "
        id="welcome"
      >
        <div
          class="container max-w-xs"
        >
          <svg
            class="w-full h-auto fill-indigo-700"
          />
        </div>
        <div
          class="font-bold text-4xl"
        >
          Welcome to Interceptor
        </div>
        <button
          class="px-9 py-3 my-6 rounded font-semibold bg-indigo-700 text-white hover:opacity-75 active:opacity-100"
          title="Add intercept"
        >
          Add Intercept
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`[App] should update after callback 1`] = `
<div>
  <div
    class="h-screen"
    id="App"
  >
    <aside
      class="flex flex-col justify-between border-r border-slate-300 fixed top-0 left-0 bottom-0 w-64"
      id="sidebar"
    >
      <div
        class="flex flex-col flex-initial overflow-y-auto"
        id="request-list"
      >
        <div
          class="p-1 flex justify-between font-bold select-none bg-slate-100"
        >
          Requests
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        >
          <div
            class="select-none whitespace-nowrap overflow-hidden text-ellipsis"
          >
            <span>
              https://example.com
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col flex-none overflow-y-auto"
        id="intercept-list"
      >
        <div
          class="p-1 flex justify-between select-none bg-slate-100"
        >
          <span
            class="font-bold"
          >
            Intercepts
          </span>
          <button
            class="self-stretch"
            title="Add intercept"
          >
            <svg
              class="h-full w-auto"
            />
          </button>
        </div>
        <div
          class="flex flex-col overflow-y-auto"
        />
      </div>
    </aside>
    <main
      class="min-h-screen ml-64"
      id="main"
    >
      <div
        class="container min-h-screen flex flex-col justify-center items-center bg-slate-50 "
        id="welcome"
      >
        <div
          class="container max-w-xs"
        >
          <svg
            class="w-full h-auto fill-indigo-700"
          />
        </div>
        <div
          class="font-bold text-4xl"
        >
          Welcome to Interceptor
        </div>
        <button
          class="px-9 py-3 my-6 rounded font-semibold bg-indigo-700 text-white hover:opacity-75 active:opacity-100"
          title="Add intercept"
        >
          Add Intercept
        </button>
      </div>
    </main>
  </div>
</div>
`;
